--- a/CodingDojo3/MainWindow.xaml
+++ b/CodingDojo3/MainWindow.xaml
@@ -7,6 +7,26 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="35*"/>
+            <RowDefinition Height="246*"/>
+            <RowDefinition Height="40*"/>
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="left">
+            <TextBox x:Name="Currency" HorizontalAlignment="Left" Height="23" Margin="10,6,0,0" TextWrapping="Wrap" Text="Currency:" VerticalAlignment="Top" Width="79"/>
+            <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Margin="1,6,0,0" VerticalAlignment="Top" Width="117"/>
+        </StackPanel>
+        <StackPanel Grid.Row="1" Grid.RowSpan="2">
+            <DataGrid Margin="10" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></DataGrid>
+        </StackPanel>
+        <StackPanel Grid.Row="2" Grid.RowSpan="3" Orientation="Horizontal" HorizontalAlignment="right">
+            <Button x:Name="button" Content="Add" Width="50" Margin="10"/>
+            <Button x:Name="Edit" Content="Edit" Width="50" Margin="10"/>
+            <Button x:Name="Delete" Content="Delete" Width="50" Margin="10"/>
+
+        </StackPanel>
+
+
+
     </Grid>
 </Window>
