--- a/CodingDojo3/MainWindow.xaml
+++ b/CodingDojo3/MainWindow.xaml
@@ -9,22 +9,33 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="35*"/>
-            <RowDefinition Height="246*"/>
+            <RowDefinition Height="206*"/>
             <RowDefinition Height="40*"/>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="left">
-            <TextBox x:Name="Currency" HorizontalAlignment="Left" Height="23" Margin="10,6,0,0" TextWrapping="Wrap" Text="Currency:" VerticalAlignment="Top" Width="79"/>
-            <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Margin="1,6,0,0" VerticalAlignment="Top" Width="117"/>
-        </StackPanel>
-        <StackPanel Grid.Row="1" Grid.RowSpan="2">
-            <DataGrid Margin="10" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></DataGrid>
-        </StackPanel>
-        <StackPanel Grid.Row="2" Grid.RowSpan="3" Orientation="Horizontal" HorizontalAlignment="right">
-            <Button x:Name="button" Content="Add" Width="50" Margin="10"/>
-            <Button x:Name="Edit" Content="Edit" Width="50" Margin="10"/>
-            <Button x:Name="Delete" Content="Delete" Width="50" Margin="10"/>
 
-        </StackPanel>
+        <TextBox x:Name="Currency" HorizontalAlignment="Left" Height="23" Margin="10,0,0,0" TextWrapping="Wrap" Text="Currency:" VerticalAlignment="Center" Width="79"/>
+            <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Margin="94,0,0,0" VerticalAlignment="Center" Width="120"
+                      ItemsSource="{Binding Currencies}" SelectedItem="{Binding SelectedCurrency}"/>
+     
+       
+      
+            <Button x:Name="Edit" Content="Edit" Width="50" Margin="366,15,101,10" Grid.Row="2"/>
+            <Button x:Name="Delete" Content="Delete" Width="50" Margin="292,15,175,10" Grid.Row="2"/>
+            <Button x:Name="button" Content="Add" Width="50" Margin="441,15,26,10" Grid.Row="2"/>
+        <DataGrid x:Name="dataGrid" HorizontalAlignment="Stretch" Grid.Row="1" VerticalAlignment="Stretch" AutoGenerateColumns="False"
+                  ItemsSource="{Binding Items}"
+                  >
+            
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Name"/>
+                <DataGridTextColumn Header="Name"/>
+                <DataGridTextColumn Header="Sales Price"/>
+                <DataGridTextColumn Header="Purchase Price"/>
+                <DataGridTextColumn Header="On Stock"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <DataGrid x:Name="dataGrid1" HorizontalAlignment="Left" Margin="208,86,0,0" Grid.Row="1" VerticalAlignment="Top"/>
+
 
 
 
