--- a/CodingDojo3/MainWindow.xaml
+++ b/CodingDojo3/MainWindow.xaml
@@ -1,20 +1,20 @@
 ﻿<Window x:Class="CodingDojo3.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CodingDojo3"
-        mc:Ignorable="d"
+        xmlns:vm="clr-namespace:CodingDojo3.ViewModels"
         Title="MainWindow" Height="350" Width="525">
+    <Window.DataContext>
+        <vm:MainViewModel></vm:MainViewModel>
+    </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="35*"/>
-            <RowDefinition Height="206*"/>
-            <RowDefinition Height="40*"/>
+            <RowDefinition Height="37*"/>
+            <RowDefinition Height="239*"/>
+            <RowDefinition Height="43*"/>
         </Grid.RowDefinitions>
 
-        <TextBox x:Name="Currency" HorizontalAlignment="Left" Height="23" Margin="10,0,0,0" TextWrapping="Wrap" Text="Currency:" VerticalAlignment="Center" Width="79"/>
-            <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Margin="94,0,0,0" VerticalAlignment="Center" Width="120"
+ 
+            <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Margin="10,0" VerticalAlignment="Center" Width="120"
                       ItemsSource="{Binding Currencies}" SelectedItem="{Binding SelectedCurrency}"/>
      
        
@@ -25,7 +25,7 @@
         <DataGrid x:Name="dataGrid" HorizontalAlignment="Stretch" Grid.Row="1" VerticalAlignment="Stretch" AutoGenerateColumns="False"
                   ItemsSource="{Binding Items}"
                   >
-            
+
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Name"/>
                 <DataGridTextColumn Header="Name"/>
@@ -34,7 +34,6 @@
                 <DataGridTextColumn Header="On Stock"/>
             </DataGrid.Columns>
         </DataGrid>
-        <DataGrid x:Name="dataGrid1" HorizontalAlignment="Left" Margin="208,86,0,0" Grid.Row="1" VerticalAlignment="Top"/>
 
 
 
